# soln-ai

./: README.md
ai_service/: Dockerfile_training  batch_requests.py  drift_detection.py  online_learning.py
analytics_service/: benchmark_model.py  optuna_hyperparameter_optimization.py
api_gateway/: Dockerfile_fastapi  auth.py  main.py  requirements.txt
ci_cd/: .gitlab-ci.yml  Jenkinsfile  enhanced_gitlab-ci.yml
config/: pyproject.toml
docs/: README.md
infrastructure/: docker-compose.yml  k8s_hpa.yaml  kubernetes_cronjob.yaml  kubernetes_job.yaml
monitoring/: grafana_alert.yaml  prometheus.yml
security_compliance/: security_enhancements.py
