
[tool.poetry]
name = "optimized_project"
version = "1.0.0"
description = "Optimized microservice architecture project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "api_gateway", from = "api_gateway/src" },
    { include = "ai_service", from = "ai_service/src" },
    { include = "analytics_service", from = "analytics_service/src" },
    { include = "data_processing", from = "data_processing/src" },
    { include = "monitoring", from = "monitoring" },
    { include = "security_compliance", from = "security_compliance/src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
prometheus-client = "^0.13.1"
kafka-python = "^2.0.2"
cryptography = "^3.4.8"
scikit-learn = "^0.24.2"
optuna = "^2.10.0"
grpcio = "^1.38.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
